fix(ui): create components for spacings

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -45,4 +45,10 @@
 	.button-outlined {
 		@apply border border-black text-black hover:bg-accent focus:outline-none focus:ring-2 focus:ring-accent focus:ring-opacity-75 lg:text-2xl;
 	}
+	.spacing-heading-body {
+		@apply mb-8 lg:mb-16;
+	}
+	.spacing-heading-subheading {
+		@apply mb-2;
+	}
 }
